--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 .nav-a{
 	color: #3D58A6;
 	font-size: 22px;
+	font-family: "Arial GEO BoldItalic", sans-serif;
+
 
 }
 .active{
@@ -69,6 +71,7 @@
 	width: 355px;
 	height: 143.29px;
 	font-size: 20px;
+	font-family: 'Redressed', cursive;
 
 }
 
