--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@
 .left-block-title{
 	margin-bottom: 29.8px;
 	font-size: 24px;
+	font-family: 'Redressed';
 }
 .left-block{
 	display: inline-block;
